Table users {
  id int [pk, increment]
  email varchar [not null, unique]
  name varchar [not null]
  status varchar [not null]
  password_hash varchar [not null]
  avatar_s3_key varchar
  created_at timestamp [not null, default: `now()`]
}

Table boards {
  id int [pk, increment]
  user_id int [not null]
  title varchar [not null]
  description text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table statuses {
  id int [pk, increment]
  board_id int [not null]
  name varchar(50) [not null]
  position int [not null, default: 0]

  indexes {
    (board_id, name) [unique]
  }
}

Table tasks {
  id int [pk, increment]
  board_id int [not null]
  title varchar [not null]
  description text
  status_id int [not null]
  priority_color varchar(50) [not null]
  deadline timestamp
  is_completed bool [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table pomodoro_sessions {
  id int [pk, increment]
  user_id int [not null]
  goal_minutes int
  work_duration_seconds int [not null]
  break_duration_seconds int [not null]
  completed_cycles int [not null, default: 0]
  started_at timestamp [not null, default: `now()`]
  completed_at timestamp
}

Ref: boards.user_id > users.id
Ref: statuses.board_id > boards.id
Ref: tasks.board_id > boards.id
Ref: tasks.status_id > statuses.id
Ref: pomodoro_sessions.user_id > users.id
